--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
+
         <title>Тест на знання української мови</title>
     <body>
         <h1>Тест на знання української мови</h1>
@@ -98,7 +98,8 @@
             <hr>
             <label for="select">На перший склад падає наголос у всіх словах, ОКРІМ:</label>
             <select id="select">
-                <optgroup label="words">
+                <optgroup label="-Вибери-">
+                    <option>-Вибери-</option>
                     <option>причіп</option>
                     <option>косий</option>
                     <option>жалюзі</option>
@@ -109,6 +110,7 @@
             <label for="selection">Разом треба писати всі складні слова в рядку</label>
             <select id="selection">
                 <optgroup label="-Вибери-">
+                    <option>-Вибери-</option>
                     <option>фото/журналіст, високо/ефективний, екс/чемпіон</option>
                     <option>супер/обкладинка, західно/європейський, мікро/схема</option>
                     <option>кисло/молочний, суспільно/політичний, пів/кілометра</option>
@@ -117,7 +119,8 @@
                 </optgroup>
             </select>
             <hr>
-            <button type="button">Завершити і відправити</button>
+            <input type="submit">
+
             <br>
             <img src="pictures/p.jpg" width="400" height="400" alt="Have a nice day">
             <cite>
