--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type="checkbox" name="language" id="your-answer">
             <hr>
             <label for="word-select">Суфікс -інн(я) має різне значення в словах рядка:</label>
-            <select id="word-select">
+            <select id="word-select" name="word-select">
                 <option value="">--Вибери--</option>
                 <option value="first">носіння, говоріння</option>
                 <option value="second">гасіння, коріння</option>
@@ -97,7 +97,7 @@
             </fieldset>
             <hr>
             <label for="select">На перший склад падає наголос у всіх словах, ОКРІМ:</label>
-            <select id="select">
+            <select id="select" name="select"
                 <optgroup label="-Вибери-">
                     <option>-Вибери-</option>
                     <option>причіп</option>
@@ -108,7 +108,8 @@
             </select>
             <hr>
             <label for="selection">Разом треба писати всі складні слова в рядку</label>
-            <select id="selection">
+            <select id="selection" name="selection">
+        "
                 <optgroup label="-Вибери-">
                     <option>-Вибери-</option>
                     <option>фото/журналіст, високо/ефективний, екс/чемпіон</option>
