--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <hr>
             <fieldset>
                 <legend>Вставним словосполученням ускладнено речення (розділові знаки пропущено)</legend>
-                <input type="radio" id="first" name="answer">
+                <input type="radio" id="first" name="ansver">
                 <label for="first">За теорією Ч. Дарвіна було знято кілька цікавих науково-популярних фільмів.</label>
                 <br>
                 <input type="radio" id="second" name="answer">
@@ -81,16 +81,16 @@
             <hr>
             <fieldset>
                 <legend>Знак м’якшення треба писати на місці пропуску в усіх словах рядка</legend>
-                <input type="radio" id="1" name="answer">
+                <input type="radio" id="1" name="answer-s">
                 <label for="first">мистец..кий, учител..ство, камін..чик</label>
                 <br>
-                <input type="radio" id="2" name="answer">
+                <input type="radio" id="2" name="answer-s">
                 <label for="second">малесен..кий, одягаєт..ся, мен..ший</label>
                 <br>
-                <input type="radio" id="3" name="answer">
+                <input type="radio" id="3" name="answer-s">
                 <label for="third">жмен..ці, винос..те, виріз..блений</label>
                 <br>
-                <input type="radio" id="4" name="answer">
+                <input type="radio" id="4" name="answer-s">
                 <label for="fourth">він..чати, запоріз..кий, жен..шень
 </label>
                 <br>
