--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </fieldset>
             <hr>
             <label for="select">На перший склад падає наголос у всіх словах, ОКРІМ:</label>
-            <select id="select" name="select"
+            <select id="select" name="select">
                 <optgroup label="-Вибери-">
                     <option>-Вибери-</option>
                     <option>причіп</option>
@@ -109,7 +109,7 @@
             <hr>
             <label for="selection">Разом треба писати всі складні слова в рядку</label>
             <select id="selection" name="selection">
-        "
+        
                 <optgroup label="-Вибери-">
                     <option>-Вибери-</option>
                     <option>фото/журналіст, високо/ефективний, екс/чемпіон</option>
